<resources>
    <string name="app_name">NoteApplicationMVP</string>
    <string name="add_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="navigation_view_header_title">Note App Simple MVP</string>
    <string name="no_notes_all">You have no Notes!</string>
    <string name="no_notes_add">Add a Note item +</string>
    <string name="no_notes_marked">You have no marked notes!</string>
    <string name="label_all">All Notes</string>
    <string name="label_marked">Marked Notes</string>
    <string name="loading_notes_error">Error while loading notes</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear marked</string>
    <string name="refresh">Refresh</string>
    <string name="note_marked">Note marked</string>
    <string name="note_unmarked">Note unmarked</string>
    <string name="marked_notes_cleared">Marked notes cleared</string>
    <string name="nav_all">All</string>
    <string name="nav_marked">Marked</string>
    <string name="title_hint">Title</string>
    <string name="text_hint">Enter your Text here.</string>
    <string name="empty_note_text">Note cannot be empty</string>
    <string name="successfully_saved_note_message">Note saved</string>
    <string name="successfully_added_note_message">Note added</string>
    <string name="successfully_deleted_note_message">Note deleted</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>
    <string name="menu_delete_note">Delete note</string>
</resources>
