...
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.mDataLoading ? View.GONE : View.VISIBLE}">

                <EditText
                    android:id="@+id/add_edit_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@={viewmodel.mTitle}"/>

                <EditText
                    android:id="@+id/add_edit_note_text"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:gravity="top"
                    android:hint="@string/text_hint"
                    android:text="@={viewmodel.mText}"/>

...
