...
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/list_item_padding"
        android:paddingTop="@dimen/list_item_padding"
        android:onClick="@{() -> listener.onNoteClicked(note)}">

    <CheckBox
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="@{(view) -> listener.onMarkChanged(note, view)}"
        android:checked="@{note.marked}"/>

...
